--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -2,14 +2,16 @@
     display: flex;
     justify-content: space-around;
     padding: 1rem 0;
-    
+    margin: auto;
+    width: 90%;
 }
 
 .navegação__imagem{
-
+    
+    
 }
 
-.container {
+.container__navegação {
     display: flex;
     align-items: center;
 }
@@ -26,7 +28,7 @@
     text-decoration: none;
     color: var(--cor-secundaria);
     margin-right: 2em;
-    font-weight: 500;
+    
     
 }
 
